--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -7,14 +7,14 @@ $timeline-width: 4px;
 $accordion-width: 470px;
 $timeline-distance-to-top: 35vh;
 $timeline-distance-to-left: 300px;
-$timeline-distance-to-left-compressed: 250px;
+$timeline-distance-to-left-compressed: 400px;
 $circle-diameter: 50px;
 $shift-container-to-right-distance: 35px; // edit this to shift central container
 $entry-distance-from-circle: 10px; // change this to move entry up/down relative to circle
 $timeline-container-width-full: 500px;
 $horizontal-timeline-height: 500px;
 $horizontal-timeline-distance-from-bottom: 150px;
-$horizontal-timeline-distance-from-bottom-smaller: 90px;
+$horizontal-timeline-distance-from-bottom-smaller: 100px;
 
 // z-indexes
 $timeline-line-z-index: 1;
